# Movie_Recommender

./: .env  LICENSE  README.MD  count_actors.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  main_import.py  pyproject.toml
FilmsDatabase/: .env  Dockerfile  README.md  alembic.ini  database.py  entrypoint.sh  models.py  requirements.txt
FilmsDatabase/db/: .database.py.swp  .database_LOCAL_49735.py.swp  .database_REMOTE_49735.py.swp  config.py  database.py  database_BACKUP_49735.py  models.py
FilmsDatabase/migration/: env.py
FilmsDatabase/migration/versions/: 012f3a3e262e_message1.py  43b57f50645b_message1.py
Movie_Rec (1.1)/: top_250.xlsx
backend/: Dockerfile  db.sqlite3  requirements.txt
backend/core/: settings.py  urls.py
backend/films/: admin.py  forms.py  models.py  urls.py  views.py
backend/films/migrations/: 0001_initial.py  0002_alter_actor_created_at_alter_actor_updated_at_and_more.py  0003_usermovierating.py
backend/films/templates/films/: movie_list.html
backend/filmsDBDataFiller/: Dockerfile  README.md  count_actors.py  count_actors.xlsx  db_film_filler.py  main_import.py  run_seeder.sh  top_250.xlsx
backend/templates/: base_generic.html
backend/templates/films/: movie_detail.html  movie_list.html
backend/templates/registration/: logged_out.html  login.html  signup.html
recommender_service/: recommender.py
