[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "film_project"  # Общее имя всего проекта
version = "0.1.0"
packages = ["FilmsDatabase", "Movie_Rec (1.1)"]  # Явное указание всех пакетов

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

# Общие зависимости для всех пакетов
dependencies = [
    "sqlalchemy>=1.4",
    "psycopg2-binary>=2.9"
]